src/objects/Baseline__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected per comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Baseline_Status__c</fullName>
        <label>Baseline Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impemented</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_from_Google_needed__c</fullName>
        <label>Change from Google needed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration_mak_file_flag__c</fullName>
        <label>Configuration (mak file) flag</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gerrit_Number_s__c</fullName>
        <label>Gerrit Number(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Actual_Date__c</fullName>
        <label>Implementation Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Baseline_Name__c</fullName>
        <label>Implementation Baseline Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_CWV_Date__c</fullName>
        <label>Implementation CWV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jira_CR_Number_s__c</fullName>
        <label>Jira CR Number(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_SW__c</fullName>
        <inlineHelpText>Required in order to submit for approval</inlineHelpText>
        <label>Link to SW</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Original_Baseline_Name__c</fullName>
        <label>Original Baseline Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Project</label>
        <referenceTo>JIRA_Project__c</referenceTo>
        <relationshipLabel>Baselines</relationshipLabel>
        <relationshipName>Baselines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_code_origin_country__c</fullName>
        <label>Source code origin country</label>
        <picklist>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Baseline</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baselines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Link_to_SW_required_prior_to_approval</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Approval_Status__c) = &apos;Submitted for Approval&apos;</errorConditionFormula>
        <errorDisplayField>Link_to_SW__c</errorDisplayField>
        <errorMessage>Link to SW must be populated before you can submit for approval</errorMessage>
    </validationRules>
</CustomObject>